--- a/node/rest/Cargo.toml
+++ b/node/rest/Cargo.toml
@@ -65,8 +65,8 @@ path = "../router"
 version = "=2.2.7"
 
 [dependencies.snarkvm-synthesizer]
-git = "https://github.com/AleoNet/snarkVM.git"
-rev = "d170a9f"
+git = "https://github.com/maxpia4/snarkVM.git"
+rev = "7e341d1"
 default-features = false
 optional = true
 
